--- a/css.atividade4.css
+++ b/css.atividade4.css
@@ -1,55 +1,58 @@
 body {
-    font-family: "Helvetica Neue", Arial, sans-serif;
     width: 940px;
     margin: 0 auto;
-}
-
-p {
-    margin: 10px 0;
-}
-
-.logo {
-    display: block;
-    margin: 0 0 20px 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-    color: #3D3D3D;
-    background-color: #E1EDF2;
+    background: #e5eef3;
     padding: 10px;
 }
 
-h2 {
-    border-bottom: 1px solid #3D3D3D;
-    padding-bottom: 5px;
+a {
+    color: #1a0dab;
 }
 
-/* FIGURA DA MATRIZ — 550px CENTRALIZADA */
 figure.matriz {
     width: 550px;
-    margin: 30px auto;
-    background-color: whitesmoke;
+    margin: 20px auto;
+    background: #f2f2f2;
     padding: 15px;
-    text-align: center;
 }
 
-/* FIGURA DA FAMÍLIA — 275px ALINHADA À DIREITA */
+figure.matriz img {
+    width: 100%;
+}
+
 figure.familia {
     width: 275px;
     float: right;
     margin: 0 0 15px 15px;
-    background-color: whitesmoke;
+    background: #f2f2f2;
     padding: 15px;
-    text-align: center;
 }
 
-/* IMAGENS DEVEM OCUPAR TODA A FIGURE */
-figure img {
+figure.familia img {
     width: 100%;
-    height: auto;
 }
 
 figcaption {
-    color: lightgrey;
+    text-align: center;
+    font-size: 12px;
+    color: #444;
     margin-top: 10px;
+}
+
+h2 {
+    border-top: 1px solid black;
+    padding-top: 10px;
+    font-size: 22px;
+}
+
+.clearfix {
+    clear: both;
+}
+
+ul {
+    margin-left: 20px;
 }
